--- a/app/src/main/res/layout/activity_chat_screen_user.xml
+++ b/app/src/main/res/layout/activity_chat_screen_user.xml
@@ -71,7 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll1"
-        android:background="#FFDDDA"
+        android:background="#FCE6FF"
         android:paddingStart="10dp"
         android:paddingTop="3dp"
         android:paddingEnd="10dp"
