--- a/app/src/main/res/layout/activity_adminpanel.xml
+++ b/app/src/main/res/layout/activity_adminpanel.xml
@@ -87,6 +87,17 @@
 
             />
 
+        <EditText
+            android:id="@+id/databaseEdittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:ems="10"
+            android:hint="Add database url"
+            android:inputType="textPersonName"
+
+            />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -100,6 +111,20 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/btn_bg"
                 android:text="ADD ReferApp URL"
+                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.105" />
+
+            <Button
+                android:id="@+id/databaseBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"
+                android:background="@drawable/btn_bg"
+                android:text="ADD Database URL"
                 app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
