--- a/app/src/main/res/layout/chat_items_recyclerview.xml
+++ b/app/src/main/res/layout/chat_items_recyclerview.xml
@@ -50,7 +50,7 @@
                     android:id="@+id/recommendationType"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="#FFDFDD"
+                    android:background="@color/themehover"
                     android:paddingLeft="3dp"
                     android:paddingRight="3dp"
                     android:text="Nearby"
