--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="themeColor">#5F0A87</color>
     <color name="themeColor2">#DF339B</color>
-    <color name="themehover">#DF9BFF</color>
+    <color name="themehover">#FAEFFF</color>
     <color name="themeColorlight">#9B4EA8</color>
     <color name="themeColorExtralight">#C798CF</color>
     <color name="grey">#BF707070</color>
@@ -19,8 +19,5 @@
     <color name="female_icon">#E91E63</color>
     <color name="male_icon">#3F51B5</color>
     <color name="green">#4CAF50</color>
-
-
-
 
 </resources>
