--- a/app/src/main/res/layout/dialog_allow_permission.xml
+++ b/app/src/main/res/layout/dialog_allow_permission.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_margin="80dp"
     android:layout_gravity="center"
     app:cardCornerRadius="30dp"
 
     >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/dialog_bg"
         android:orientation="vertical"
@@ -18,7 +19,7 @@
         android:paddingRight="40dp"
         android:paddingBottom="25dp"
         android:paddingTop="25dp"
-     >
+        >
 
 
         <TextView
@@ -195,7 +196,7 @@
             android:text="Allow"
             android:textColor="#ffffff"
             android:textSize="18dp"
-           />
+            />
     </LinearLayout>
 
 
